--- a/embeddings/Skip-Gram_word2vec.ipynb
+++ b/embeddings/Skip-Gram_word2vec.ipynb
@@ -55,11 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\smtah\\Miniconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "\n",
@@ -78,11 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Text8 Dataset: 31.4MB [02:43, 192kB/s]                                                                                 \n"
+     ]
+    }
+   ],
    "source": [
     "from urllib.request import urlretrieve\n",
     "from os.path import isfile, isdir\n",
@@ -127,11 +140,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['anarchism', 'originated', 'as', 'a', 'term', 'of', 'abuse', 'first', 'used', 'against', 'early', 'working', 'class', 'radicals', 'including', 'the', 'diggers', 'of', 'the', 'english', 'revolution', 'and', 'the', 'sans', 'culottes', 'of', 'the', 'french', 'revolution', 'whilst']\n"
+     ]
+    }
+   ],
    "source": [
     "words = utils.preprocess(text)\n",
     "print(words[:30])"
@@ -139,11 +158,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total words: 16680599\n",
+      "Unique words: 63641\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Total words: {}\".format(len(words)))\n",
     "print(\"Unique words: {}\".format(len(set(words))))"
@@ -158,10 +184,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "vocab_to_int, int_to_vocab = utils.create_lookup_tables(words)\n",
@@ -187,14 +211,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Your code here\n",
-    "train_words = # The final subsampled word list"
+    "from collections import Counter\n",
+    "import random\n",
+    "\n",
+    "threshold = 1e-5\n",
+    "word_counts = Counter(int_words)\n",
+    "total_count = len(int_words)\n",
+    "freqs = {word: count / total_count for word, count in word_counts.items()}\n",
+    "p_drop = {word: 1 - np.sqrt(threshold / freqs[word]) for word in word_counts}\n",
+    "train_words = [word for word in int_words if random.random() < (1- p_drop[word])]\n"
    ]
   },
   {
@@ -219,18 +249,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_target(words, idx, window_size=5):\n",
     "    ''' Get a list of words in a window around an index. '''\n",
-    "    \n",
     "    # Your code here\n",
+    "    R = np.random.randin(1, window_size+1)\n",
+    "    start = idx - R if (idx -R) > 0 else 0\n",
+    "    stop = idx + R\n",
+    "    target_words = set(words[start:idx] + words[idx+1:stop+1])\n",
     "    \n",
-    "    return"
+    "    \n",
+    "    \n",
+    "    return list(target_words)"
    ]
   },
   {
@@ -242,10 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_batches(words, batch_size, window_size=5):\n",
@@ -288,16 +319,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_graph = tf.Graph()\n",
     "with train_graph.as_default():\n",
-    "    inputs = \n",
-    "    labels = "
+    "    inputs = tf.placeholder(tf.int32, [None], name='inputs')\n",
+    "    labels = tf.placeholder(tf.int32, [None, None], name='labels')"
    ]
   },
   {
@@ -322,17 +351,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "n_vocab = len(int_to_vocab)\n",
-    "n_embedding =  # Number of embedding features \n",
+    "n_embedding = 200 # Number of embedding features \n",
     "with train_graph.as_default():\n",
-    "    embedding = # create embedding weight matrix here\n",
-    "    embed = # use tf.nn.embedding_lookup to get the hidden layer output"
+    "    # embedding weight matrix\n",
+    "    embedding = tf.Variable(tf.random_uniform((n_vocab, n_embedding), -1, 1))\n",
+    "    # use tf.nn.embedding_lookup to get the hidden layer output\n",
+    "    embed = tf.nn.embedding_lookup(embedding, inputs)"
    ]
   },
   {
@@ -354,20 +383,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\smtah\\Miniconda3\\lib\\site-packages\\tensorflow\\python\\ops\\nn_impl.py:1344: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "\n",
+      "Future major versions of TensorFlow will allow gradients to flow\n",
+      "into the labels input on backprop by default.\n",
+      "\n",
+      "See @{tf.nn.softmax_cross_entropy_with_logits_v2}.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Number of negative labels to sample\n",
     "n_sampled = 100\n",
     "with train_graph.as_default():\n",
-    "    softmax_w = # create softmax weight matrix here\n",
-    "    softmax_b = # create softmax biases here\n",
+    "    # create softmax weight matrix\n",
+    "    softmax_w = tf.Variable(tf.truncated_normal((n_vocab, n_embedding), stddev=0.1))\n",
+    "    # create softmax biases\n",
+    "    softmax_b = tf.Variable(tf.zeros(n_vocab))\n",
     "    \n",
     "    # Calculate the loss using negative sampling\n",
-    "    loss = tf.nn.sampled_softmax_loss \n",
+    "    loss = tf.nn.sampled_softmax_loss(softmax_w, softmax_b, labels, embed, n_sampled, n_vocab)\n",
     "    \n",
     "    cost = tf.reduce_mean(loss)\n",
     "    optimizer = tf.train.AdamOptimizer().minimize(cost)"
@@ -565,7 +609,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -579,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
