--- a/sentiment-rnn/Sentiment_RNN.ipynb
+++ b/sentiment-rnn/Sentiment_RNN.ipynb
@@ -21,10 +21,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -33,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +52,7 @@
        "'bromwell high is a cartoon comedy . it ran at the same time as some other programs about school life  such as  teachers  . my   years in the teaching profession lead me to believe that bromwell high  s satire is much closer to reality than is  teachers  . the scramble to survive financially  the insightful students who can see right through their pathetic teachers  pomp  the pettiness of the whole situation  all remind me of the schools i knew and their students . when i saw the episode in which a student repeatedly tried to burn down the school  i immediately recalled . . . . . . . . . at . . . . . . . . . . high . a classic line inspector i  m here to sack one of your teachers . student welcome to bromwell high . i expect that many adults of my age think that bromwell high is far fetched . what a pity that it isn  t   \\nstory of a man who has unnatural feelings for a pig . starts out with a opening scene that is a terrific example of absurd comedy . a formal orchestra audience is turned into an insane  violent mob by the crazy chantings of it  s singers . unfortunately it stays absurd the whole time with no general narrative eventually making it just too off putting . even those from the era should be turned off . the cryptic dialogue would make shakespeare seem easy to a third grader . on a technical level it  s better than you might think with some good cinematography by future great vilmos zsigmond . future stars sally kirkland and frederic forrest can be seen briefly .  \\nhomelessness  or houselessness as george carlin stated  has been an issue for years but never a plan to help those on the street that were once considered human who did everything from going to school  work  or vote for the matter . most people think of the homeless as just a lost cause while worrying about things such as racism  the war on iraq  pressuring kids to succeed  technology  the elections  inflation  or worrying if they  ll be next to end up on the streets .  br    br   but what if y'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,10 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from string import punctuation\n",
@@ -94,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +99,7 @@
        "'bromwell high is a cartoon comedy  it ran at the same time as some other programs about school life  such as  teachers   my   years in the teaching profession lead me to believe that bromwell high  s satire is much closer to reality than is  teachers   the scramble to survive financially  the insightful students who can see right through their pathetic teachers  pomp  the pettiness of the whole situation  all remind me of the schools i knew and their students  when i saw the episode in which a student repeatedly tried to burn down the school  i immediately recalled          at           high  a classic line inspector i  m here to sack one of your teachers  student welcome to bromwell high  i expect that many adults of my age think that bromwell high is far fetched  what a pity that it isn  t    story of a man who has unnatural feelings for a pig  starts out with a opening scene that is a terrific example of absurd comedy  a formal orchestra audience is turned into an insane  violent mob by the crazy chantings of it  s singers  unfortunately it stays absurd the whole time with no general narrative eventually making it just too off putting  even those from the era should be turned off  the cryptic dialogue would make shakespeare seem easy to a third grader  on a technical level it  s better than you might think with some good cinematography by future great vilmos zsigmond  future stars sally kirkland and frederic forrest can be seen briefly    homelessness  or houselessness as george carlin stated  has been an issue for years but never a plan to help those on the street that were once considered human who did everything from going to school  work  or vote for the matter  most people think of the homeless as just a lost cause while worrying about things such as racism  the war on iraq  pressuring kids to succeed  technology  the elections  inflation  or worrying if they  ll be next to end up on the streets   br    br   but what if you were given a bet to live on the st'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +218,7 @@
        " 'high']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,17 +241,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import Counter\n",
     "# Create your dictionary that maps vocab words to integers here\n",
-    "vocab_to_int = \n",
+    "counts = Counter(words)\n",
+    "vocab = sorted(counts, key=counts.get, reverse=True)\n",
+    "vocab_to_int = {word: ii for ii, word in enumerate(vocab, 1)} \n",
     "\n",
     "# Convert the reviews to integers, same shape as reviews list, but with integers\n",
-    "reviews_ints = "
+    "reviews_ints = []\n",
+    "for each in reviews:\n",
+    "    reviews_ints.append([vocab_to_int[word] for word in each.split()])"
    ]
   },
   {
@@ -271,12 +270,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert labels to 1s and 0s for 'positive' and 'negative'\n",
-    "labels = "
+    "labels = labels.split('\\n')\n",
+    "labels = np.array([1 if each == 'positive' else 0 for each in labels])"
    ]
   },
   {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -318,12 +318,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25000"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "non_zero_idx = [ii for ii, review in enumerate(reviews_ints) if len(review) != 0]\n",
+    "len(non_zero_idx)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Filter out that review with 0 length\n",
+    "reviews_ints[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Filter out that review with 0 length\n",
-    "reviews_ints = "
+    "reviews_ints = [reviews_ints[ii] for ii in non_zero_idx]\n",
+    "labels = np.array([labels[ii] for ii in non_zero_idx])"
    ]
   },
   {
@@ -338,12 +380,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "seq_len = 200\n",
-    "features = "
+    "features = np.zeros((len(reviews_ints), seq_len), dtype=int)\n",
+    "for i, row in enumerate(reviews_ints):\n",
+    "    features[i, -len(row):] = np.array(row)[:seq_len]"
    ]
   },
   {
@@ -511,17 +555,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t\t\tFeature Shapes:\n",
+      "Train set: \t\t(20000, 200) \n",
+      "Validation set: \t(2500, 200) \n",
+      "Test set: \t\t(2500, 200)\n"
+     ]
+    }
+   ],
    "source": [
     "split_frac = 0.8\n",
     "\n",
-    "train_x, val_x = \n",
-    "train_y, val_y = \n",
+    "split_idx = int(len(features)*0.8)\n",
     "\n",
-    "val_x, test_x = \n",
-    "val_y, test_y = \n",
+    "train_x, val_x = features[:split_idx], features[split_idx:]\n",
+    "train_y, val_y = labels[:split_idx], labels[split_idx:]\n",
+    "\n",
+    "test_idx = int(len(val_x)*0.5)\n",
+    "\n",
+    "val_x, test_x = val_x[:test_idx], val_x[test_idx:]\n",
+    "val_y, test_y = val_y[:test_idx], val_y[test_idx:]\n",
     "\n",
     "print(\"\\t\\t\\tFeature Shapes:\")\n",
     "print(\"Train set: \\t\\t{}\".format(train_x.shape), \n",
@@ -558,10 +617,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [],
    "source": [
     "lstm_size = 256\n",
@@ -586,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,9 +653,9 @@
     "graph = tf.Graph()\n",
     "# Add nodes to the graph\n",
     "with graph.as_default():\n",
-    "    inputs_ = \n",
-    "    labels_ = \n",
-    "    keep_prob = "
+    "    inputs_ = tf.placeholder(tf.int32, [None, None], name='inputs')\n",
+    "    labels_ = tf.placeholder(tf.int32, [None, None], name='labels')\n",
+    "    keep_prob = tf.placeholder(tf.float32, name='keep_prob')"
    ]
   },
   {
@@ -615,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,8 +680,8 @@
     "embed_size = 300 \n",
     "\n",
     "with graph.as_default():\n",
-    "    embedding = \n",
-    "    embed = "
+    "    embedding = tf.Variable(tf.random_uniform((n_words, embed_size), -1, 1))\n",
+    "    embed = tf.nn.embedding_lookup(embedding, inputs_)"
    ]
   },
   {
@@ -870,7 +927,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -884,7 +941,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
